# DownloadFileSharePoint-Bot

./: .gitignore  index.html  main.ipynb  main.py  pyproject.toml  test.py
WebAccess/: 001705.csv  004100.csv  014400.csv  026600.csv
bot/: __init__.py  share_point.py  web_access.py
